Added compiler and lexer modules

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,12 @@ add_executable(yezik
     error.h
     error.c
 
+    lexer.h
+    lexer.c
+
     emitter.h
     emitter.c
+
+    compiler.h
+    compiler.c
 )
