Finished very basic compiler
Now functions without arguments
    and with empty body can be compiled.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,15 @@ add_executable(yezik
     lexer.h
     lexer.c
 
+    ast.h
+    ast.c
+
+    parser.h
+    parser.c
+
+    generator.h
+    generator.c
+
     emitter.h
     emitter.c
 
